# protopong

./: .gitignore  CMakeLists.txt  CMakePresets.json  CREDITS.txt  LICENSE.md  README.md
cmake/: BuildLocation.cmake  BuildType.cmake  CPackConfig.cmake  CPackOptions.cmake.in  CompilerFlags.cmake  Dependencies.cmake  DownloadDir.cmake  InstallLocation.cmake  Options.cmake  Platform.cmake  Projects.cmake  Version.cmake
cmake/find/: FindSDL2.cmake  FindUTF8D.cmake
cmake/project/: GLEW.cmake  GLM.cmake  SDL2.cmake  SDL2MSVC.cmake  SDL2MSVC.lists.cmake  UTF8D.cmake
protopong/src/: Project.hpp
src/: App.cpp  App.hpp  Audio.cpp  Audio.hpp  Ball.cpp  Ball.hpp  CMakeLists.txt  Controller.hpp  ControllerAI.cpp  ControllerAI.hpp  ControllerHuman.cpp  ControllerHuman.hpp  Entity.hpp  Event.cpp  Event.hpp  Game.cpp  Game.hpp  Label.cpp  Label.hpp  Main.cpp  Paddle.cpp  Paddle.hpp  Project.hpp.in  RealTimeClock.cpp  RealTimeClock.hpp  Renderer.hpp  RendererGL2.cpp  RendererGL2.hpp  RendererGL3.cpp  RendererGL3.hpp  RendererGL3Util.hpp  Require.hpp  Scene.cpp  Scene.hpp  Table.cpp  Table.hpp  Time.hpp
src/data/: Char.cpp  Char.hpp  Shader.cpp  Shader.hpp  Sound.cpp  Sound.hpp
src/lib/: utf8d.cpp  utf8d.hpp
